Add ElevenLabs widget

--- a/index.html
+++ b/index.html
@@ -599,5 +599,6 @@
         </script>  
     <!-- Snackbar -->
     <div id="snackbar"></div>
+    <elevenlabs-convai agent-id="yACRgFEacuTJr15idSa5"></elevenlabs-convai><script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
     </body>
 </html>
