--- a/index.html
+++ b/index.html
@@ -52,33 +52,57 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted">Our AI-powered services are designed to optimize your business processes, delivering smarter, faster, and more scalable solutions to meet your specific needs.</h3>
+                    <h3 class="section-subheading text-muted" style="margin-bottom: 3rem;">We empower your business with custom AI, Automation, and BI solutions designed to optimize processes, solve challenges, and drive data-backed decisions for transformative growth.</h3>
                 </div>
                 <div class="row text-center">
-                    <div class="col-md-4">
-                        <!-- <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                        </span> -->
-                        <span class="svg-icon">
-                            <img src="assets/img/services/roboarm.svg" alt="Robotic Arm Icon" width="180" height="180">
+                     <div class="col-md-4">
+                         <span class="svg-icon">
+                            <img src="assets/img/services/chatBot.png" alt="Chatbot Icon" width="180" height="180">
                         </span>
-                        <h4 class="my-3">AI-Driven Process Automation</h4>
-                        <p class="text-muted">Automate routine processes and maximize operational efficiency with AI solutions designed to simplify your daily tasks.</p>
+                        <h4 class="my-3">Engage Customers & Boost Productivity with AI Agents</h4>
+                        <p class="text-muted">Deploy smart chatbots (Web/WhatsApp) for 24/7 support & lead gen, plus internal virtual assistants (Teams/Slack) for instant knowledge access.</p>
                     </div>
                     <div class="col-md-4">
                         <span class="svg-icon">
-                            <img src="assets/img/services/brain.svg" alt="Robotic Arm Icon" width="180" height="180">
+                             <img src="assets/img/services/roboarm.png" alt="Automation Icon" width="180" height="180">
                         </span>
-                        <h4 class="my-3">Custom AI Solutions</h4>
-                        <p class="text-muted">We develop tailor-made AI models that fit your business needs, from optimization to scalability.</p>
+                        <h4 class="my-3">Streamline Operations with Smart Automation</h4>
+                        <p class="text-muted">Eliminate repetitive tasks across sales, marketing, and support. Automate communications, document processing (AI/OCR), and workflows for peak efficiency.</p>
                     </div>
                     <div class="col-md-4">
-                        <span class="svg-icon">
-                            <img src="assets/img/services/prompt.svg" alt="Robotic Arm Icon" width="180" height="180">
-                        </span>
-                        <h4 class="my-3">AI-Powered GPTs and Prompts</h4>
-                        <p class="text-muted">Create content and automate interactions with custom GPT models, fine-tuned to respond and generate accurate, efficient information.</p>
+                         <span class="svg-icon">
+                             <img src="assets/img/services/brain.png" alt="BI Icon" width="180" height="180">
+                         </span>
+                        <h4 class="my-3">Unlock Insights with Data Intelligence</h4>
+                         <p class="text-muted">Transform raw data into actionable insights. We build data pipelines and custom dashboards (Looker/Power BI) to track KPIs and drive smarter decisions.</p>
+                    </div>
+                     <div class="col-md-4">
+                         <span class="svg-icon">
+                             <img src="assets/img/services/web.png" alt="Web App Icon" width="180" height="180">
+                         </span>
+                        <h4 class="my-3">Build Unique AI-Driven Web Tools</h4>
+                         <p class="text-muted">Need a specialized solution? We develop custom web apps powered by AI for complex calculations, unique business logic, and seamless lead capture.</p>
+                    </div>
+                     <div class="col-md-4">
+                         <span class="svg-icon">
+                             <img src="assets/img/services/api.png" alt="Integration Icon" width="180" height="180">
+                         </span>
+                        <h4 class="my-3">Connect Your Ecosystem Seamlessly</h4>
+                        <p class="text-muted">Make your tools work together. We integrate CRMs, communication platforms, calendars, and more using APIs and no-code solutions.</p>
+                    </div>
+                     <div class="col-md-4">
+                         <span class="svg-icon">
+                             <img src="assets/img/services/strategy.png" alt="Consulting Icon" width="180" height="180">
+                         </span>
+                        <h4 class="my-3">Expert Strategy for AI Transformation</h4>
+                        <p class="text-muted">Navigate your AI journey with confidence. We analyze your needs, design tailored roadmaps, and guide implementation for maximum impact and smooth adoption.</p>
+                    </div>
+                     <div class="col-md-4">
+                         <span class="svg-icon">
+                             <img src="assets/img/services/support.png" alt="Support Icon" width="180" height="180">
+                         </span>
+                        <h4 class="my-3">Ongoing Support for Peak Performance</h4>
+                         <p class="text-muted">Ensure your solutions run smoothly and evolve with your business. Our tailored support plans cover operation, optimization, and proactive maintenance.</p>
                     </div>
                 </div>
             </div>
@@ -354,7 +378,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; AutomationAI 2024</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; AutomationAI 2025</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
                         <a class="btn btn-dark btn-social mx-2" href="#!" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
