Cambio de fondo de la pantalla de calculadora

--- a/calculator.html
+++ b/calculator.html
@@ -52,7 +52,7 @@
     <body id="page-top">
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand" href="index.html#page-top"><img src="assets/img/navbar-logo.svg" alt="AutomationAI Logo" /></a>
+                <a class="navbar-brand" href="index.html#page-top"><img src="assets/img/AutomationAI_logo_white.svg" alt="AutomationAI Logo" /></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ms-1"></i>
@@ -68,10 +68,10 @@
                 </div>
             </div>
         </nav>
-        <header class="masthead" style="padding-top: 10rem; padding-bottom: 4rem; background-image: none; background-color: #f8f9fa;">
+        <header class="masthead" style="padding-top: 10rem; padding-bottom: 4rem; background-image: url('assets/img/fondocalculadora.png'); background-size: cover; background-position: center center; background-repeat: no-repeat;">
             <div class="container">
-                <div class="masthead-heading text-uppercase" style="font-size: 2.5em; color: #343a40;">Calculadora de Materiales</div>
-                <div class="masthead-subheading" style="color: #6c757d;">Estima los materiales y costos para tu proyecto.</div>
+                <div class="masthead-heading text-uppercase" style="font-size: 2.5em; color: #ffffff;">Calculadora de Materiales</div>
+                <div class="masthead-subheading" style="color: #FFFFff;">Estima los materiales y costos para tu proyecto.</div>
             </div>
         </header>
 
@@ -136,7 +136,7 @@
                                 <input type="number" class="form-control" id="dimensions" step="0.01" min="0.1" placeholder="Ej: 50.5" required>
                             </div>
 
-                            <div class="col-12 text-center mt-4">
+                            <div class="col-12 text-center" style="margin-top: 4rem;">
                                 <button type="submit" class="btn btn-primary btn-xl text-uppercase">Calcular Materiales</button>
                             </div>
                         </div>
