Agregada opcion eliminar materiales

--- a/calculator.html
+++ b/calculator.html
@@ -157,6 +157,7 @@
                                     <th>Cantidad Estimada</th>
                                     <th>Precio Unitario (Est.)</th>
                                     <th>Costo Parcial (Est.)</th>
+                                    <th>Acción</th>
                                 </tr>
                             </thead>
                             <tbody id="resultsBody">
